--- a/index.html
+++ b/index.html
@@ -3,33 +3,33 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Southern British English Accent Coaching</title>
+  <title>Rob Foster Accent Coaching</title>
   <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
 
   <header>
     <div class="container">
-      <h1>Speak Clear, Confident Southern British English</h1>
-      <p>1-to-1 online accent coaching to help you sound natural, be understood, and speak with confidence.</p>
+      <h1>Speak Southern British English with Ease and Impact</h1>
+      <p>1-to-1 online accent coaching to help you sound natural, reduce misunderstandings, and express yourself with greater ease.</p>
     </div>
   </header>
 
   <section class="about">
     <div class="container">
       <h2>About Me</h2>
-      <p>Hello! I’m [Your Name], an accent coach specialising in Southern British English. I work with non-native speakers who want to feel confident and be understood in every conversation.</p>
+      <p>Hello! I’m Rob, an accent coach specialising in Southern British English, sometimes called Received Pronunciation (RP). I work with non-native speakers who want their spoken English to feel effortless and engaging — so their ideas come across exactly as intended.</p>
     </div>
   </section>
 
   <section class="benefits">
     <div class="container">
-      <h2>Why Work With Me?</h2>
+      <h2>What We’ll Work On</h2>
       <ul>
-        <li>Be understood the first time without repeating yourself</li>
-        <li>Sound more natural in professional and social situations</li>
-        <li>Boost your speaking confidence</li>
-        <li>Learn practical pronunciation techniques you can use immediately</li>
+        <li>Reducing moments where listeners ask you to repeat yourself</li>
+        <li>Developing a natural rhythm, stress, and intonation</li>
+        <li>Fine-tuning vowel and consonant sounds that are tricky for you</li>
+        <li>Building a style of speech that feels authentic but easily understood by native speakers</li>
       </ul>
     </div>
   </section>
@@ -37,7 +37,7 @@
   <section class="contact">
     <div class="container">
       <h2>Register Your Interest</h2>
-      <p>Fill in the form below and I’ll be in touch to arrange your free 1-to-1 online session.</p>
+      <p>Tell me a little about your background and what you’d like to improve. I’ll get in touch to arrange a free 1-to-1 online session.</p>
       
       <form action="https://formspree.io/f/YOUR_FORM_ID" method="POST">
         <label for="name">Name:</label>
@@ -56,7 +56,7 @@
 
   <footer>
     <div class="container">
-      <p>&copy; 2025 [Your Name]. All rights reserved.</p>
+      <p>&copy; 2025 Rob Foster. All rights reserved.</p>
     </div>
   </footer>
 
