--- a/index.html
+++ b/index.html
@@ -10,17 +10,34 @@
 
   <header>
     <div class="container">
-      <h1>Speak Southern British English with Ease and Impact</h1>
-      <p>1-to-1 online accent coaching to help you sound natural, reduce misunderstandings, and express yourself with greater ease.</p>
+      <h1>Rob Foster Accent Coaching</h1>
+      <p>1-to-1 online accent coaching to help you sound natural, reduce misunderstandings, and express yourself more clearly.</p>
     </div>
   </header>
 
-  <section class="about">
-    <div class="container">
-      <h2>About Me</h2>
-      <p>Hello! I’m Rob, an accent coach specialising in Southern British English, sometimes called Received Pronunciation (RP). I work with non-native speakers who want their spoken English to feel effortless and engaging — so their ideas come across exactly as intended.</p>
-    </div>
-  </section>
+<section class="about">
+  <div class="container">
+    <h2>About Me</h2>
+    <p>My name is Rob Foster. I have a first-class degree in Linguistics from University College London, and I am CELTA-qualified in Teaching English as a Foreign Language. My formal training in education, phonetics, and phonology has given me a deep understanding of the English language on a technical level.</p>
+    <p>Alongside my academic background, I bring years of performance experience as a cellist in orchestras and solo recitals. This has taught me how much the quality of the sound you produce shapes how your audience responds — a principle that applies just as much to speech as it does to music.</p>
+  </div>
+</section>
+
+<section class="accent-info">
+  <div class="container">
+    <h2>What is Standard Southern British English?</h2>
+    <p>I train students in Standard Southern British English (SSBE) — a contemporary British accent spoken in the south of England and representative of millions of modern English speakers. This is the accent you’ll hear in most online British English dictionaries, including the Oxford English Dictionary, the Cambridge Dictionary, and the Collins English Dictionary.</p>
+    <!-- Optionally add audio clips here -->
+  </div>
+</section>
+
+<section class="approach">
+  <div class="container">
+    <h2>My Approach</h2>
+    <p>Our goal is to move towards a more native-like Southern British accent while tackling your specific frustrations and confusions about pronunciation. Accent training isn’t about mimicking someone else’s voice — it’s about understanding why certain areas of your speech may be misunderstood and learning how to produce sounds clearly and accurately.</p>
+    <p>Every session is tailored to your needs, focusing on the areas that will have the biggest impact. The aim is to produce the sounds of a natural-sounding Southern British accent that feels authentic to you — not to “fake” a voice that doesn’t reflect who you are.</p>
+  </div>
+</section>
 
   <section class="benefits">
     <div class="container">
@@ -62,3 +79,4 @@
 
 </body>
 </html>
+
