--- a/index.html
+++ b/index.html
@@ -59,6 +59,27 @@
   </div>
 </section>
 
+<section class="who-i-work-with">
+  <div class="container">
+    <h2>Who I Work With</h2>
+    <p>My coaching is designed for learners who:</p>
+    <ul>
+      <li>Are sometimes asked to repeat themselves when speaking</li>
+      <li>Find that others struggle to understand their accent</li>
+      <li>Already have an upper-intermediate or advanced level of English</li>
+      <li>Want to improve their British accent — especially in Standard Southern British English</li>
+    </ul>
+  </div>
+</section>
+
+<section class="progress">
+  <div class="container">
+    <h2>When to Expect Results</h2>
+    <p>You’ll often notice progress in the specific area we focus on during a single session. For broader improvement across your accent, I recommend a minimum of five sessions — giving us time to work on a range of pronunciation features and practise them in context.</p>
+    <p>There’s no set limit to the number of sessions you can take. You’re welcome to learn at your own pace, with as much time between sessions as you need.</p>
+  </div>
+</section>
+
   <section class="contact">
     <div class="container">
       <h2>Register Your Interest</h2>
@@ -87,5 +108,6 @@
 
 </body>
 </html>
+
 
 
