--- a/index.html
+++ b/index.html
@@ -85,15 +85,18 @@
       <h2>Register Your Interest</h2>
       <p>Tell me a little about your background and what you’d like to improve. I’ll get in touch to arrange a free 1-to-1 online session.</p>
       
-      <form action="https://formspree.io/f/YOUR_FORM_ID" method="POST">
+      <form action="https://formspree.io/f/mwpqyebg" method="POST">
         <label for="name">Name:</label>
         <input type="text" id="name" name="name" required />
 
         <label for="email">Email:</label>
         <input type="email" id="email" name="_replyto" required />
 
-        <label for="message">Your main goal in improving your accent:</label>
-        <textarea id="message" name="message" rows="4" required></textarea>
+        <label for="email">Your native language(s):</label>
+        <input type="language" id="language" name="_replyto" required />
+
+        <label for="message">Why are you interested in accent coaching?</label>
+        <textarea id="goal" name="goal" rows="4" required></textarea>
 
         <button type="submit">Send</button>
       </form>
@@ -108,6 +111,7 @@
 
 </body>
 </html>
+
 
 
 
