--- a/index.html
+++ b/index.html
@@ -80,28 +80,61 @@
   </div>
 </section>
 
-  <section class="contact">
-    <div class="container">
-      <h2>Register Your Interest</h2>
-      <p>Tell me a little about your background and what you’d like to improve. I’ll get in touch to arrange a free 1-to-1 online session.</p>
-      
-      <form action="https://formspree.io/f/mwpqyebg" method="POST">
-        <label for="name">Name:</label>
-        <input type="text" id="name" name="name" required />
+<section class="contact">
+  <div class="container">
+    <h2>Register Your Interest</h2>
+    <p>Tell me a little about your background and what you’d like to improve. I’ll get in touch to arrange a free 1-to-1 online session.</p>
 
-        <label for="email">Email:</label>
-        <input type="email" id="email" name="_replyto" required />
+    <form id="contact-form" action="https://formspree.io/f/mwpqyebg" method="POST">
+      <!-- Name -->
+      <label for="name">Name:</label>
+      <input type="text" id="name" name="name" placeholder="Your full name" required>
 
-        <label for="email">Your native language(s):</label>
-        <input type="language" id="language" name="_replyto" required />
+      <!-- Email -->
+      <label for="email">Email:</label>
+      <input type="email" id="email" name="email" placeholder="you@example.com" required>
 
-        <label for="message">Why are you interested in accent coaching?</label>
-        <textarea id="goal" name="goal" rows="4" required></textarea>
+      <!-- Native Language -->
+      <label for="language">Your native language(s):</label>
+      <input type="text" id="language" name="language" placeholder="E.g., Spanish, Mandarin" required>
 
-        <button type="submit">Send</button>
-      </form>
-    </div>
-  </section>
+      <!-- Goals -->
+      <label for="goal">Why are you interested in accent coaching?</label>
+      <textarea id="goal" name="goal" rows="4" placeholder="Tell me about your goals or challenges..." required></textarea>
+
+      <button type="submit">Send</button>
+    </form>
+
+    <!-- Success / Error Messages -->
+    <p id="form-status" style="margin-top: 10px;"></p>
+  </div>
+</section>
+
+<script>
+  const form = document.getElementById('contact-form');
+  const status = document.getElementById('form-status');
+
+  async function handleSubmit(event) {
+    event.preventDefault();
+    const data = new FormData(form);
+    const response = await fetch(form.action, {
+      method: form.method,
+      body: data,
+      headers: { 'Accept': 'application/json' }
+    });
+
+    if (response.ok) {
+      status.textContent = "✅ Your message has been sent! I’ll be in touch soon.";
+      status.style.color = "green";
+      form.reset();
+    } else {
+      status.textContent = "❌ Oops! There was a problem sending your message.";
+      status.style.color = "red";
+    }
+  }
+
+  form.addEventListener('submit', handleSubmit);
+</script>
 
   <footer>
     <div class="container">
@@ -111,6 +144,7 @@
 
 </body>
 </html>
+
 
 
 
