--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 <section class="contact">
   <div class="container">
     <h2>Register Your Interest</h2>
-    <p>Tell me a little about your background and what you’d like to improve. I’ll get in touch to arrange a free 1-to-1 online session.</p>
+    <p>Tell me a little about your background and what you’d like to improve. I’ll get in touch to arrange a 1-to-1 online session.</p>
 
     <form id="contact-form" action="https://formspree.io/f/mwpqyebg" method="POST">
       <!-- Name -->
@@ -144,6 +144,7 @@
 
 </body>
 </html>
+
 
 
 
