--- a/index.html
+++ b/index.html
@@ -80,6 +80,23 @@
   </div>
 </section>
 
+<section class="pricing">
+  <div class="container">
+    <h2>Pricing</h2>
+    <p>Each 50-minute 1-to-1 online accent coaching session is <strong>£60</strong>. Your investment includes much more than just the live call — you’ll get personalised support and resources to help you progress between sessions.</p>
+
+    <h3>What’s included</h3>
+    <ul>
+      <li><strong>Free 15-minute introductory video call</strong> before your first paid session to assess your accent, explain how sessions work, and answer your questions.</li>
+      <li><strong>Email summary</strong> after each session outlining the topics covered and key points to remember.</li>
+      <li><strong>Access to personalised exercises, audio examples, and other materials</strong> relevant to what we worked on in your last session.</li>
+      <li>Flexible payment options via <strong>PayPal</strong> or <strong>bank transfer</strong>.</li>
+    </ul>
+
+    <p>Whether you want to improve for professional communication, study, or personal confidence, each session is designed to give you practical results you can hear and feel right away.</p>
+  </div>
+</section>
+
 <section class="contact">
   <div class="container">
     <h2>Register Your Interest</h2>
@@ -144,6 +161,7 @@
 
 </body>
 </html>
+
 
 
 
