--- a/index.html
+++ b/index.html
@@ -119,6 +119,10 @@
       <label for="goal">Why are you interested in accent coaching?</label>
       <textarea id="goal" name="goal" rows="4" placeholder="Tell me about your goals or challenges..." required></textarea>
 
+      <!-- Availability -->
+      <label for="availability">Please share the days/times you are free for regular sessions</label>
+      <input type="text" id="availability" name="availability" placeholder="E.g., Mondays 6–8pm, weekends, flexible..." required>
+
       <button type="submit">Send</button>
     </form>
 
@@ -153,6 +157,7 @@
   form.addEventListener('submit', handleSubmit);
 </script>
 
+
   <footer>
     <div class="container">
       <p>&copy; 2025 Rob Foster. All rights reserved.</p>
@@ -161,6 +166,7 @@
 
 </body>
 </html>
+
 
 
 
