--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
 <section class="contact">
   <div class="container">
     <h2>Register Your Interest</h2>
-    <p>Tell me a little about your background and what you’d like to improve. I’ll get in touch to arrange a 1-to-1 online session.</p>
+    <p>Tell me a little about your background and what you’d like to improve. I’ll get in touch to arrange a 1-to-1 online introductory session.</p>
 
     <form id="contact-form" action="https://formspree.io/f/mwpqyebg" method="POST">
       <!-- Name -->
@@ -166,6 +166,7 @@
 
 </body>
 </html>
+
 
 
 
