--- a/index.html
+++ b/index.html
@@ -8,12 +8,14 @@
 </head>
 <body>
 
-  <header>
-    <div class="container">
+  <header class="hero">
+    <div class="container hero-content">
       <h1>Rob Foster Accent Coaching</h1>
       <p>1-to-1 online accent coaching to help you sound natural, reduce misunderstandings, and express yourself more clearly.</p>
+      <a href="#contact" class="btn-primary">Register Your Interest</a>
     </div>
   </header>
+
 
 <section class="about">
   <div class="container">
@@ -166,6 +168,7 @@
 
 </body>
 </html>
+
 
 
 
