--- a/index.html
+++ b/index.html
@@ -18,12 +18,18 @@
 
 
 <section class="about">
-  <div class="container">
-    <h2>About Me</h2>
-    <p>My name is Rob Foster. I have a first-class degree in Linguistics from University College London, and I am CELTA-qualified in Teaching English as a Foreign Language. My formal training in education, phonetics, and phonology has given me a deep understanding of the English language on a technical level.</p>
-    <p>Alongside my academic background, I bring years of performance experience as a cellist in orchestras and solo recitals. This has taught me how much the quality of the sound you produce shapes how your audience responds — a principle that applies just as much to speech as it does to music.</p>
+  <div class="container about-flex">
+    <div class="about-text">
+      <h2>About Me</h2>
+      <p>My name is Rob Foster. I have a first-class degree in Linguistics from University College London, and I am CELTA-qualified in Teaching English as a Foreign Language. My formal training in education, phonetics, and phonology has given me a deep understanding of the English language on a technical level.</p>
+      <p>Alongside my academic background, I bring years of performance experience as a cellist in orchestras and solo recitals. This has taught me how much the quality of the sound you produce shapes how your audience responds — a principle that applies just as much to speech as it does to music.</p>
+    </div>
+    <div class="about-image">
+      <img src="your-photo.jpg" alt="Rob Foster" />
+    </div>
   </div>
 </section>
+
 
 <section class="accent-info">
   <div class="container">
@@ -99,7 +105,8 @@
   </div>
 </section>
 
-<section class="contact">
+
+<section id="contact" class="contact">
   <div class="container">
     <h2>Register Your Interest</h2>
     <p>Tell me a little about your background and what you’d like to improve. I’ll get in touch to arrange a 1-to-1 online introductory session.</p>
@@ -168,6 +175,7 @@
 
 </body>
 </html>
+
 
 
 
