--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
       <p>My name is Rob Foster. I have a first-class degree in Linguistics from University College London, and I am CELTA-qualified in Teaching English as a Foreign Language. My formal training in education, phonetics, and phonology has given me a deep understanding of the English language on a technical level.</p>
       <p>Alongside my academic background, I bring years of performance experience as a cellist in orchestras and solo recitals. This has taught me how much the quality of the sound you produce shapes how your audience responds — a principle that applies just as much to speech as it does to music.</p>
     </div>
-    <div class="about-image">
+    <div class="images/profile2">
       <img src="your-photo.jpg" alt="Rob Foster" />
     </div>
   </div>
@@ -175,6 +175,7 @@
 
 </body>
 </html>
+
 
 
 
