--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       <p>Alongside my academic background, I bring years of performance experience as a cellist in orchestras and solo recitals. This has taught me how much the quality of the sound you produce shapes how your audience responds — a principle that applies just as much to speech as it does to music.</p>
     </div>
     <div class="about-image">
-      <img src="images/profile2.jpg" alt="Rob Foster" />
+      <img src="images/profile2.png" alt="Rob Foster" />
     </div>
   </div>
 </section>
@@ -175,6 +175,7 @@
 
 </body>
 </html>
+
 
 
 
