--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Rob Foster Accent Coaching</title>
+  <title>Rob Foster Accent Coaching</title> 
   <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
@@ -21,7 +21,7 @@
   <div class="container about-flex">
     <div class="about-text">
       <h2>About Me</h2>
-      <p>My name is Rob Foster. I have a first-class degree in Linguistics from University College London, and I am CELTA-qualified in Teaching English as a Foreign Language. My formal training in education, phonetics, and phonology has given me a deep understanding of the English language on a technical level.</p>
+      <p>My name is Rob Foster, an accent coach from Cambridgeshire in the south of England. I have a first-class degree in Linguistics from University College London, and I am CELTA-qualified in Teaching English as a Foreign Language. My formal training in education, phonetics, and phonology has given me a deep understanding of the English language on a technical level.</p>
       <p>Alongside my academic background, I bring years of performance experience as a cellist in orchestras and solo recitals. This has taught me how much the quality of the sound you produce shapes how your audience responds — a principle that applies just as much to speech as it does to music.</p>
     </div>
     <div class="about-image">
@@ -31,19 +31,12 @@
 </section>
 
 
-<section class="accent-info">
-  <div class="container">
-    <h2>What is Standard Southern British English?</h2>
-    <p>I train students in Standard Southern British English (SSBE) — a contemporary British accent spoken in the south of England and representative of millions of modern English speakers. This is the accent you’ll hear in most online British English dictionaries, including the Oxford English Dictionary, the Cambridge Dictionary, and the Collins English Dictionary.</p>
-    <!-- Optionally add audio clips here -->
-  </div>
-</section>
-
 <section class="approach">
   <div class="container">
-    <h2>My Approach</h2>
-    <p>Our goal is to move towards a more native-like Southern British accent while tackling your specific frustrations and confusions about pronunciation. Accent training isn’t about mimicking someone else’s voice — it’s about understanding why certain areas of your speech may be misunderstood and learning how to produce sounds clearly and accurately.</p>
-    <p>Every session is tailored to your needs, focusing on the areas that will have the biggest impact. The aim is to produce the sounds of a natural-sounding Southern British accent that feels authentic to you — not to “fake” a voice that doesn’t reflect who you are.</p>
+    <h2>My Approach</h2>o
+    <p>I train students in Standard Southern British English (SSBE) — the British accent of millions of modern English speakers. This is the accent you’ll hear in most online British English dictionaries, including the Oxford English Dictionary, the Cambridge Dictionary, and the Collins English Dictionary.</p>
+    <p>Our goal is to move towards a more native-like British accent while tackling your specific frustrations and confusions about pronunciation. Accent training isn’t about mimicking someone else’s voice — it’s about understanding why certain areas of your speech may be misunderstood and learning how to produce sounds clearly and accurately.</p>
+    <p>Every session is tailored to your needs, focusing on the areas that will have the biggest impact. The aim is to produce the sounds of a natural-sounding British accent that feels authentic to you — not to “fake” a voice that doesn’t reflect who you are.</p>
   </div>
 </section>
 
@@ -69,13 +62,15 @@
 
 <section class="who-i-work-with">
   <div class="container">
-    <h2>Who I Work With</h2>
-    <p>My coaching is designed for learners who:</p>
+    <h2>Why Accent Coaching</h2>
+    <p>My coaching is beneficial for upper-intermediate or experienced speakers of English who:</p>
     <ul>
-      <li>Are sometimes asked to repeat themselves when speaking</li>
-      <li>Find that others struggle to understand their accent</li>
-      <li>Already have an upper-intermediate or advanced level of English</li>
-      <li>Want to improve their British accent — especially in Standard Southern British English</li>
+      <li>Find that others sometimes struggle to understand their accent</li>
+      <li>Are often asked to repeat themselves</li>
+      <li>Want to improve the clarity of their speech at work, as a student, or for content creation</li>
+      <li>Plan to live in the UK or other English-speaking countries</li>
+      <li>Want greater confidence in how they sound speaking English</li>
+      <li>Are simply interested in learning how to produce an authentic British accent</li>
     </ul>
   </div>
 </section>
@@ -175,6 +170,7 @@
 
 </body>
 </html>
+
 
 
 
