--- a/index.html
+++ b/index.html
@@ -10,20 +10,26 @@
 
   <header class="hero">
     <div class="container hero-content">
-      <h1>Rob Foster Accent Coaching</h1>
-      <p>1-to-1 online accent coaching to help you sound natural, reduce misunderstandings, and express yourself more clearly.</p>
-      <a href="#contact" class="btn-primary">Register Your Interest</a>
+      <h1>Rob Foster - Accent Coaching</h1>
+      <p>1-to-1 online British accent coaching. Sound natural. Feel confident. Find your voice.</p>
+      <a href="#contact" class="btn-primary">Contact me</a>
     </div>
   </header>
 
 
 <section class="about">
   <div class="container about-flex">
-    <div class="about-text">
-      <h2>About Me</h2>
-      <p>My name is Rob Foster, an accent coach from Cambridgeshire in the south of England. I have a first-class degree in Linguistics from University College London, and I am CELTA-qualified in Teaching English as a Foreign Language. My formal training in education, phonetics, and phonology has given me a deep understanding of the English language on a technical level.</p>
-      <p>Alongside my academic background, I bring years of performance experience as a cellist in orchestras and solo recitals. This has taught me how much the quality of the sound you produce shapes how your audience responds — a principle that applies just as much to speech as it does to music.</p>
-    </div>
+<div class="about-text">
+  <h2>About Me</h2>
+  <p>Hello! I'm Rob Foster, an accent coach based in Cambridgeshire in the south of England. My experience with languages, education, and music has given me a thorough understanding of sound systems and how to express yourself effectively.
+    <ul>
+    <li><b>1st-class BA Linguistics</b> from University College London (UCL)</li>
+    <li><b>CELTA-qualified</b> (Certificate in English Language Teaching to Adults)</li>
+    <li><b>Years of performance experience</b>as a cellist in orchestras and solo recitals (Grade 8 Trinity)</li>
+    </ul>
+  </p>
+
+</div>
     <div class="about-image">
       <img src="images/profile2.png" alt="Rob Foster" />
     </div>
@@ -33,10 +39,10 @@
 
 <section class="approach">
   <div class="container">
-    <h2>My Approach</h2>o
-    <p>I train students in Standard Southern British English (SSBE) — the British accent of millions of modern English speakers. This is the accent you’ll hear in most online British English dictionaries, including the Oxford English Dictionary, the Cambridge Dictionary, and the Collins English Dictionary.</p>
-    <p>Our goal is to move towards a more native-like British accent while tackling your specific frustrations and confusions about pronunciation. Accent training isn’t about mimicking someone else’s voice — it’s about understanding why certain areas of your speech may be misunderstood and learning how to produce sounds clearly and accurately.</p>
-    <p>Every session is tailored to your needs, focusing on the areas that will have the biggest impact. The aim is to produce the sounds of a natural-sounding British accent that feels authentic to you — not to “fake” a voice that doesn’t reflect who you are.</p>
+    <h2>My Approach</h2>
+    <p>I train students in <b>Standard Southern British English (SSBE)</b> — the British accent of <b>millions of modern English speakers</b>. This is the accent you’ll hear in most online British English dictionaries, including the Oxford English Dictionary, the Cambridge Dictionary, and the Collins English Dictionary.</p>
+    <p><b>Our goal is to move towards a more native-like British accent</b> while tackling your specific frustrations and confusions about pronunciation. Accent training will help you to produce sounds clearly and accurately, and to understand why certain areas of your speech may be misunderstood.</p>
+    <p><b>Every session is tailored to your needs</b>, focusing on the areas that will have the biggest impact. The aim is to produce a natural-sounding British accent that <b>feels authentic to you</b>.</p>
   </div>
 </section>
 
@@ -170,6 +176,7 @@
 
 </body>
 </html>
+
 
 
 
