--- a/index.html
+++ b/index.html
@@ -10,8 +10,10 @@
 
   <header class="hero">
     <div class="container hero-content">
-      <h1>Rob Foster - Accent Coaching</h1>
-      <p>1-to-1 online British accent coaching. Sound natural. Feel confident. Find your voice.</p>
+      <h1>Rob Foster</h1>
+      <h1>Accent Coaching</h1>
+      <p>1-to-1 online British accent coaching.</p>
+      <p>Sound natural. Feel confident. Find your voice.</p>
       <a href="#contact" class="btn-primary">Contact me</a>
     </div>
   </header>
@@ -25,7 +27,7 @@
     <ul>
     <li><b>1st-class BA Linguistics</b> from University College London (UCL)</li>
     <li><b>CELTA-qualified</b> (Certificate in English Language Teaching to Adults)</li>
-    <li><b>Years of performance experience</b>as a cellist in orchestras and solo recitals (Grade 8 Trinity)</li>
+    <li><b>Years of performance experience</b> as a cellist in orchestras and solo recitals (Grade 8 Trinity)</li>
     </ul>
   </p>
 
@@ -176,6 +178,7 @@
 
 </body>
 </html>
+
 
 
 
