--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 <section class="approach">
   <div class="container">
     <h2>My Approach</h2>
-    <p>Welcome! I train students in <b>Standard Southern British English (SSBE)</b> — the British accent of <b>millions of modern English speakers</b>. This is the accent you’ll hear in most online British English dictionaries, including the Oxford English Dictionary, the Cambridge Dictionary, and the Collins English Dictionary.</p>
+    <p>I train students in <b>Standard Southern British English (SSBE)</b> — the British accent of <b>millions of modern English speakers</b>. This is the accent you’ll hear in most online British English dictionaries, including the Oxford English Dictionary, the Cambridge Dictionary, and the Collins English Dictionary.</p>
     <p><b>Our goal is to move towards a more native-like British accent</b> while tackling your specific frustrations and confusions about pronunciation. Accent training will help you to produce sounds clearly and accurately, and to understand why certain areas of your speech may be misunderstood.</p>
     <p><b>Every session is tailored to your needs</b>, focusing on the areas that will have the biggest impact. The aim is to produce a natural-sounding British accent that <b>feels authentic to you</b>.</p>
   </div>
@@ -190,6 +190,7 @@ document.addEventListener("scroll", () => {
 
 </body>
 </html>
+
 
 
 
