--- a/index.html
+++ b/index.html
@@ -50,6 +50,22 @@
   </div>
 </section>
 
+
+<section class="who-i-work-with">
+  <div class="container">
+    <h2>Is Accent Coaching for me?</h2>
+    <p>My coaching is beneficial for upper-intermediate or experienced speakers of English who:</p>
+    <ul>
+      <li>Find that others sometimes struggle to understand their accent</li>
+      <li>Are often asked to repeat themselves</li>
+      <li>Want to improve the clarity of their speech at work, as a student, or for content creation</li>
+      <li>Plan to live in the UK or other English-speaking countries</li>
+      <li>Want greater confidence in how they sound speaking English</li>
+      <li>Are simply interested in learning how to produce an authentic British accent</li>
+    </ul>
+  </div>
+</section>
+
 <section class="learning-experience">
   <div class="container">
     <h2>The Learning Experience</h2>
@@ -66,21 +82,6 @@
       <li>“Before and after” comparisons so you can clearly hear your own progress</li>
       <li>Simple diagrams showing how to position your tongue, lips, and jaw for accurate sounds</li>
       <li>A jargon-free approach — no formal linguistics knowledge required, just clear explanations</li>
-    </ul>
-  </div>
-</section>
-
-<section class="who-i-work-with">
-  <div class="container">
-    <h2>Why Accent Coaching</h2>
-    <p>My coaching is beneficial for upper-intermediate or experienced speakers of English who:</p>
-    <ul>
-      <li>Find that others sometimes struggle to understand their accent</li>
-      <li>Are often asked to repeat themselves</li>
-      <li>Want to improve the clarity of their speech at work, as a student, or for content creation</li>
-      <li>Plan to live in the UK or other English-speaking countries</li>
-      <li>Want greater confidence in how they sound speaking English</li>
-      <li>Are simply interested in learning how to produce an authentic British accent</li>
     </ul>
   </div>
 </section>
@@ -137,7 +138,9 @@
       <label for="availability">Please share the days/times you are free for regular sessions</label>
       <input type="text" id="availability" name="availability" placeholder="E.g., Mondays 6–8pm, weekends, flexible..." required>
 
-      <button type="submit">Send</button>
+  
+    <button type="submit" class="btn-primary">Send</button>
+
     </form>
 
     <!-- Success / Error Messages -->
@@ -190,6 +193,7 @@ document.addEventListener("scroll", () => {
 
 </body>
 </html>
+
 
 
 
