--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Rob Foster Accent Coaching</title> 
   <link rel="stylesheet" href="styles.css" />
+  <link rel="icon" href="images/speech_bubble.ico" type="image/x-icon">
+
 </head>
 <body>
 
@@ -191,6 +193,7 @@ document.addEventListener("scroll", () => {
 
 </body>
 </html>
+
 
 
 
